# GoogleWeatherOpenAPI

./: .gitignore  README.md  llms-full.txt  llms.txt  pyproject.toml
artifacts/apk/: split_config.arm64_v8a.apk  split_config.xxhdpi.apk
artifacts/metadata/: identity.json
docs/: auth.md  postman-guide.md  postman-guide.ru.md  test-repo-deletion-blocker.md
docs/endpoints/: README.md  air-quality.md  blocks.md  common.md  forecast.md  imagery.md  location.md  maps.md  pollen.md  preferences.md
examples/: quickstart.py
openapi/: openapi.json  openapi.yaml
postman/: Google Weather Open API English.postman_collection.json  Google Weather Open API Russian.postman_collection.json  Google Weather Open API.postman_environment.json
postman/.postman/: resources.yaml
scripts/: grpc_client.py  repro_all.sh
src/google_weather/: __init__.py  cli.py  client.py  credentials.py  protobuf_codec.py  rest_server.py  transport.py
tests/: test_grpc_client.py  test_package.py
wiki/: Architecture.md  Auth-Walls.md  Credentials.md  Endpoints.md  Home.md  Postman.md  Python-Library.md  Quick-Start.md  REST-Proxy.md  Troubleshooting.md  Vibe-Coders.md
