[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "google-weather-open-api"
version = "0.1.0"
description = "Google Weather Open API — REST-style Python client for Pixel Weather weatherhub gRPC"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "MrFaDeveloper" }]
keywords = ["weather", "google", "pixel", "weatherhub", "grpc", "api"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
google-weather = "google_weather.cli:main"

[project.urls]
Homepage = "https://github.com/MrFaDeveloper/GoogleWeatherOpenAPI"
Repository = "https://github.com/MrFaDeveloper/GoogleWeatherOpenAPI"
Documentation = "https://github.com/MrFaDeveloper/GoogleWeatherOpenAPI/wiki"
Postman = "https://www.postman.com/altimetry-operator-52698115-s-team/workspace/google-weather-open-api/7f362113-7e78-4fce-88d2-6b76d9e15aeb"

[tool.setuptools.packages.find]
where = ["src"]
